--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,136 +6,265 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/EditViewY"
-        android:layout_width="156dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+    <Button
+        android:id="@+id/button33"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:text="log"
+        app:layout_constraintBottom_toTopOf="@+id/button34"
+        app:layout_constraintEnd_toStartOf="@+id/button20"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button23"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="1dp"
+        android:text="1"
+        app:layout_constraintBottom_toTopOf="@+id/button31"
+        app:layout_constraintEnd_toStartOf="@+id/button19"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:text="5"
+        app:layout_constraintBottom_toTopOf="@+id/button19"
+        app:layout_constraintStart_toEndOf="@+id/button22" />
+
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:text="-"
+        app:layout_constraintBottom_toTopOf="@+id/button24"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TxtViewResult" />
+        app:layout_constraintStart_toEndOf="@+id/button27" />
+
+    <Button
+        android:id="@+id/button24"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:text="X"
+        app:layout_constraintBottom_toTopOf="@+id/button25"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button28" />
+
+    <Button
+        android:id="@+id/button21"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:text="7"
+        app:layout_constraintBottom_toTopOf="@+id/button22"
+        app:layout_constraintEnd_toStartOf="@+id/button17"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button27"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:text="9"
+        app:layout_constraintBottom_toTopOf="@+id/button28"
+        app:layout_constraintStart_toEndOf="@+id/button17" />
+
+    <Button
+        android:id="@+id/button32"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/button12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button26" />
+
+    <Button
+        android:id="@+id/button19"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="1dp"
+        android:text="2"
+        app:layout_constraintBottom_toTopOf="@+id/button16"
+        app:layout_constraintStart_toEndOf="@+id/button23" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="151dp"
+        android:text="="
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button16" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="151dp"
+        android:text="%"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button15" />
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:text="8"
+        app:layout_constraintBottom_toTopOf="@+id/button18"
+        app:layout_constraintStart_toEndOf="@+id/button21" />
+
+    <Button
+        android:id="@+id/button35"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:text="CA"
+        app:layout_constraintBottom_toTopOf="@+id/button32"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button36" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="151dp"
+        android:text="."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button31" />
+
+    <Button
+        android:id="@+id/button30"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:text=")"
+        app:layout_constraintBottom_toTopOf="@+id/button17"
+        app:layout_constraintStart_toEndOf="@+id/button34" />
+
+    <Button
+        android:id="@+id/button25"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="54dp"
+        android:layout_marginBottom="1dp"
+        android:text="/"
+        app:layout_constraintBottom_toTopOf="@+id/button14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button29" />
+
+    <Button
+        android:id="@+id/button29"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="1dp"
+        android:text="3"
+        app:layout_constraintBottom_toTopOf="@+id/button15"
+        app:layout_constraintStart_toEndOf="@+id/button19" />
+
+    <Button
+        android:id="@+id/button31"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="151dp"
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button16"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button26"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:text="√"
+        app:layout_constraintBottom_toTopOf="@+id/button27"
+        app:layout_constraintStart_toEndOf="@+id/button30" />
+
+    <Button
+        android:id="@+id/button36"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:text="C"
+        app:layout_constraintBottom_toTopOf="@+id/button26"
+        app:layout_constraintStart_toEndOf="@+id/button20" />
+
+    <Button
+        android:id="@+id/button22"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:text="4"
+        app:layout_constraintBottom_toTopOf="@+id/button23"
+        app:layout_constraintEnd_toStartOf="@+id/button18"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="10dp"
+        android:text="sen"
+        app:layout_constraintBottom_toTopOf="@+id/button30"
+        app:layout_constraintStart_toEndOf="@+id/button33" />
+
+    <Button
+        android:id="@+id/button28"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="12dp"
+        android:text="6"
+        app:layout_constraintBottom_toTopOf="@+id/button29"
+        app:layout_constraintStart_toEndOf="@+id/button18" />
+
+    <Button
+        android:id="@+id/button34"
+        android:layout_width="66dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="10dp"
+        android:text="("
+        app:layout_constraintBottom_toTopOf="@+id/button21"
+        app:layout_constraintEnd_toStartOf="@+id/button30"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/TxtViewResult"
-        android:layout_width="345dp"
-        android:layout_height="52dp"
+        android:id="@+id/textView3"
+        android:layout_width="386dp"
+        android:layout_height="130dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:text="TextView"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="37dp" />
-
-    <EditText
-        android:id="@+id/EditViewX"
-        android:layout_width="163dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintEnd_toStartOf="@+id/EditViewY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TxtViewResult" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="112dp"
-        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button6" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="94dp"
-        android:layout_height="47dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="32dp"
-        android:text="Raiz"
-        app:layout_constraintBottom_toTopOf="@+id/button6"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginBottom="32dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="32dp"
-        android:text="Button"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/button4" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="95dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="36dp"
-        android:text="Dividir"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintStart_toEndOf="@+id/imageButton4" />
-
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="68dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/btn_plus"
-        tools:layout_editor_absoluteY="403dp" />
-
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="63dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginBottom="108dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button6"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@android:drawable/btn_minus" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:text="Button"
-        tools:layout_editor_absoluteX="158dp"
-        tools:layout_editor_absoluteY="575dp" />
-
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="63dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="52dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="37dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
-        app:layout_constraintEnd_toStartOf="@+id/button5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton4"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@android:drawable/btn_dialog" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.221" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
