--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:text="log"
+        android:text="@+string/log"
         app:layout_constraintBottom_toTopOf="@+id/parentesisOpen"
         app:layout_constraintEnd_toStartOf="@+id/seno"
         app:layout_constraintStart_toStartOf="parent" />
@@ -133,7 +133,7 @@
         app:layout_constraintStart_toEndOf="@+id/siete" />
 
     <Button
-        android:id="@+id/clearAll"
+        android:id="@+id/limpiar"
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
@@ -249,14 +249,13 @@
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:imeActionId="AbrirParentesis"
         android:text="("
         app:layout_constraintBottom_toTopOf="@+id/siete"
         app:layout_constraintEnd_toStartOf="@+id/CerrarParentesis"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/TextViewDatos"
+        android:id="@+id/textView3"
         android:layout_width="386dp"
         android:layout_height="130dp"
         android:layout_marginStart="12dp"
