--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:text="@+string/log"
-        app:layout_constraintBottom_toTopOf="@+id/parentesisOpen"
+        android:text="@string/log"
+        app:layout_constraintBottom_toTopOf="@+id/parentesisAbrir"
         app:layout_constraintEnd_toStartOf="@+id/seno"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="1dp"
-        android:text="1"
+        android:text="@string/_1"
         app:layout_constraintBottom_toTopOf="@+id/cero"
         app:layout_constraintEnd_toStartOf="@+id/dos"
         app:layout_constraintStart_toStartOf="parent" />
@@ -34,7 +34,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
-        android:text="5"
+        android:text="@string/_5"
         app:layout_constraintBottom_toTopOf="@+id/dos"
         app:layout_constraintStart_toEndOf="@+id/cuatro" />
 
@@ -44,7 +44,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
-        android:text="-"
+        android:text="@string/resta"
         app:layout_constraintBottom_toTopOf="@+id/multiplicacion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/nueve" />
@@ -55,7 +55,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
-        android:text="X"
+        android:text="@string/x"
         app:layout_constraintBottom_toTopOf="@+id/dividir"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/seis" />
@@ -66,7 +66,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:text="7"
+        android:text="@string/_7"
         app:layout_constraintBottom_toTopOf="@+id/cuatro"
         app:layout_constraintEnd_toStartOf="@+id/ocho"
         app:layout_constraintStart_toStartOf="parent" />
@@ -76,7 +76,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
-        android:text="9"
+        android:text="@string/_9"
         app:layout_constraintBottom_toTopOf="@+id/seis"
         app:layout_constraintStart_toEndOf="@+id/ocho" />
 
@@ -86,7 +86,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
-        android:text="+"
+        android:text="@string/suma"
         app:layout_constraintBottom_toTopOf="@+id/resta"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/raiz" />
@@ -97,7 +97,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="1dp"
-        android:text="2"
+        android:text="@string/_2"
         app:layout_constraintBottom_toTopOf="@+id/decimal"
         app:layout_constraintStart_toEndOf="@+id/uno" />
 
@@ -107,7 +107,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="151dp"
-        android:text="="
+        android:text="@string/igual"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/decimal" />
 
@@ -118,7 +118,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
         android:layout_marginBottom="151dp"
-        android:text="%"
+        android:text="@string/porcentaje"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/igual" />
@@ -128,7 +128,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
-        android:text="8"
+        android:text="@string/_8"
         app:layout_constraintBottom_toTopOf="@+id/cinco"
         app:layout_constraintStart_toEndOf="@+id/siete" />
 
@@ -138,7 +138,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
-        android:text="CA"
+        android:text="@string/ca"
         app:layout_constraintBottom_toTopOf="@+id/suma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/potencia" />
@@ -149,7 +149,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="151dp"
-        android:text="."
+        android:text="@string/punto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cero" />
 
@@ -158,9 +158,9 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
-        android:text=")"
+        android:text="@string/Cerrarparentesis"
         app:layout_constraintBottom_toTopOf="@+id/ocho"
-        app:layout_constraintStart_toEndOf="@+id/parentesisOpen" />
+        app:layout_constraintStart_toEndOf="@+id/parentesisAbrir" />
 
     <Button
         android:id="@+id/dividir"
@@ -169,7 +169,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginEnd="54dp"
         android:layout_marginBottom="1dp"
-        android:text="/"
+        android:text="@string/dividir"
         app:layout_constraintBottom_toTopOf="@+id/porcentaje"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tres" />
@@ -180,7 +180,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
         android:layout_marginBottom="1dp"
-        android:text="3"
+        android:text="@string/_3"
         app:layout_constraintBottom_toTopOf="@+id/igual"
         app:layout_constraintStart_toEndOf="@+id/dos" />
 
@@ -191,7 +191,7 @@
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="151dp"
-        android:text="0"
+        android:text="@string/_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/decimal"
         app:layout_constraintStart_toStartOf="parent" />
@@ -201,7 +201,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
-        android:text="√"
+        android:text="@string/raiz"
         app:layout_constraintBottom_toTopOf="@+id/nueve"
         app:layout_constraintStart_toEndOf="@+id/CerrarParentesis" />
 
@@ -210,7 +210,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
-        android:text="^"
+        android:text="@string/potencia"
         app:layout_constraintBottom_toTopOf="@+id/raiz"
         app:layout_constraintStart_toEndOf="@+id/seno" />
 
@@ -220,7 +220,7 @@
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:text="4"
+        android:text="@string/_4"
         app:layout_constraintBottom_toTopOf="@+id/uno"
         app:layout_constraintEnd_toStartOf="@+id/cinco"
         app:layout_constraintStart_toStartOf="parent" />
@@ -230,7 +230,7 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="10dp"
-        android:text="sen"
+        android:text="@string/sen"
         app:layout_constraintBottom_toTopOf="@+id/CerrarParentesis"
         app:layout_constraintStart_toEndOf="@+id/logaritmo" />
 
@@ -239,28 +239,27 @@
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="12dp"
-        android:text="6"
+        android:text="@string/_6"
         app:layout_constraintBottom_toTopOf="@+id/tres"
         app:layout_constraintStart_toEndOf="@+id/cinco" />
 
     <Button
-        android:id="@+id/parentesisOpen"
+        android:id="@+id/parentesisAbrir"
         android:layout_width="66dp"
         android:layout_height="43dp"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="10dp"
-        android:text="("
+        android:text="@string/parentecisAbrir"
         app:layout_constraintBottom_toTopOf="@+id/siete"
         app:layout_constraintEnd_toStartOf="@+id/CerrarParentesis"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/TxtViewDisplay"
         android:layout_width="386dp"
         android:layout_height="130dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
